--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 <body>
     <div class="quiz-container">
         <h1>塔羅牌義學習測驗</h1>
+        <div id="score" style="font-size: 1.2rem; margin: 10px 0; color: var(--accent-gold);">得分: 0/0</div>
         <img id="card-image" src="" alt="塔羅牌">
         <div id="card-name"></div>
         <div id="text-question"></div>
